fixed problems with button being covered

--- a/src/scss/components/_code-generator.scss
+++ b/src/scss/components/_code-generator.scss
@@ -3,36 +3,42 @@
   flex-direction: column;
   width: 100vw;
   height: 80vh;
+  position: relative;
 }
 
 .left-box-bg,
 .right-box-bg {
-  z-index: 0;
-  background: rgba(255, 0, 0, 0.178);
+  z-index: 2;
+  background: white;
   width: 50vw;
-  height: 80%;
-  border-radius: 100px;
+  height: 50%;
+  border-radius: 50px;
+  position: absolute;
+  top: 0;
 }
 
 .left-box-bg {
-  position: absolute;
   left: 0;
 }
 
 .right-box-bg {
-  position: absolute;
   right: 0;
 }
 
 .input-container {
-  z-index: 1;
+  z-index: 4;
   height: 33vh;
 }
 
 .button-container {
   @include flex-center;
-  z-index: 1;
   height: 33vh;
+  width: 100vw;
+  background: $primary;
+}
+
+.button-wrapper {
+  z-index: 4;
   button {
     width: 110px;
     height: 110px;
@@ -48,4 +54,10 @@
 .morse-container {
   z-index: 1;
   height: 33vh;
+  width: 100vw;
+  text-align: left;
+  background: $primary;
+  border-radius: 20px;
+  overflow-x: scroll;
+  overflow-wrap: break-word;
 }
